icon launcher added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="until">Until :</string>
     <string name="so_where_is_the_moon">So, where is the moon?</string>
     <string name="the_dark_place_is_where_the_moon_is">The dark place is where the moon is</string>
+    <string name="moon_facts">Moon facts</string>
+    <string name="where_is_my_moon">Where is my moon?</string>
 </resources>
