--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">where is my moon</string>
+    <string name="app_name">Moon?</string>
     <string name="please_wait">Please wait</string>
     <string name="title_activity_moon_scrolling">Current Moon</string>
     <string name="action_settings">Settings</string>
